fixed button img/text spacing

--- a/gbc-clean/sass/main.scss
+++ b/gbc-clean/sass/main.scss
@@ -43,7 +43,7 @@ BODY {
 }
 .gbc_ButtonWidget {
 	&.hasText .mt-button {
-		padding-right: 15px;
+		padding-right: 5px;
 	}
 }
 [__ButtonWidget].hasImage span[__ButtonWidget] {
